--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<div class="messages"></div><br>
 		<form>
 			<div id='typing'></div><br>
-			<input type="text" class="input" autocomplete="off" autofocus onkeypress='typing(event)' onkeydown='typing(event)' onkeyup='typing(event)'/>
+			<input type='text'  class="input" autocomplete="off" autofocus onkeypress='typing(event)' onkeydown='typing(event)' onkeyup='typing(event)'></input>
 
 			<button onsubmit='sukak(event)'>Send</button>
 		</form>
